deploy: 95ea93c489b5d9f9e3fb61d21c3dd881facd5e88

--- a/admins/install-binary.html
+++ b/admins/install-binary.html
@@ -181,12 +181,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="binary-installation"><a class="header" href="#binary-installation">Binary Installation</a></h1>
-<h2 id="stable"><a class="header" href="#stable">Stable</a></h2>
-<p>Doesn't have a stable version yet.</p>
-<h2 id="nightly"><a class="header" href="#nightly">Nightly</a></h2>
-<p>Hatsu provides nightly Binary builds.</p>
-<p>Please note that it is unstable and may contain breaking changes.</p>
-<p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/nightly.yml">Workflow runs page</a> (containing <code>{x86_64,aarch64}-unknown-linux-{gnu,musl}</code>).</p>
+<h2 id="releases"><a class="header" href="#releases">Releases</a></h2>
+<p>You can download both stable and beta versions of Hatsu from the <a href="https://github.com/importantimport/hatsu/releases">Releases page</a>.</p>
+<h2 id="artifacts"><a class="header" href="#artifacts">Artifacts</a></h2>
+<p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/release.yml">Workflow runs page</a>.</p>
 <p>GitHub has a document that tells you how to download artifact: <a href="https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts">https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts</a></p>
 
                     </main>
