--- a/admins/install.html
+++ b/admins/install.html
@@ -181,6 +181,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="install"><a class="header" href="#install">Install</a></h1>
+<h2 id="docker-installation"><a class="header" href="#docker-installation"><a href="./install-docker.html">Docker Installation</a></a></h2>
+<h2 id="binary-installation"><a class="header" href="#binary-installation"><a href="./install-binary.html">Binary Installation</a></a></h2>
 
                     </main>
 
