--- a/others/compatibility-chart.html
+++ b/others/compatibility-chart.html
@@ -185,21 +185,21 @@
 <p>Currently I've created a chart for all the platforms I expect to be compatible with, and hopefully it will be filled in later:</p>
 <h2 id="send"><a class="header" href="#send">Send</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Note">Create</a> (Note)</th><th><a href="https://www.w3.org/ns/activitystreams#Accept">Accept</a> (Follow)</th></tr></thead><tbody>
-<tr><td>Mastodon</td><td>✅</td><td>✅</td></tr>
-<tr><td>GoToSocial</td><td></td><td></td></tr>
-<tr><td>Misskey</td><td></td><td></td></tr>
-<tr><td>Pleroma</td><td></td><td></td></tr>
+<tr><td><a href="https://github.com/mastodon/mastodon">Mastodon</a></td><td>✅</td><td>✅</td></tr>
+<tr><td><a href="https://github.com/superseriousbusiness/gotosocial">GoToSocial</a></td><td></td><td></td></tr>
+<tr><td><a href="https://github.com/misskey-dev/misskey">Misskey</a></td><td></td><td></td></tr>
+<tr><td><a href="https://git.pleroma.social/pleroma/pleroma/">Pleroma</a></td><td>✅</td><td></td></tr>
 </tbody></table>
 </div>
 <h2 id="receive"><a class="header" href="#receive">Receive</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th><a href="https://www.w3.org/ns/activitystreams#Follow">Follow</a></th><th></th></tr></thead><tbody>
-<tr><td>Mastodon</td><td>✅</td><td></td></tr>
-<tr><td>GoToSocial</td><td></td><td></td></tr>
-<tr><td>Misskey</td><td></td><td></td></tr>
-<tr><td>Pleroma</td><td></td><td></td></tr>
+<tr><td><a href="https://github.com/mastodon/mastodon">Mastodon</a></td><td>✅</td><td></td></tr>
+<tr><td><a href="https://github.com/superseriousbusiness/gotosocial">GoToSocial</a></td><td></td><td></td></tr>
+<tr><td><a href="https://github.com/misskey-dev/misskey">Misskey</a></td><td></td><td></td></tr>
+<tr><td><a href="https://git.pleroma.social/pleroma/pleroma/">Pleroma</a></td><td></td><td></td></tr>
 </tbody></table>
-</div><!-- After a period of time: if you wish to support the new platform, you can open a new discussion. -->
-<!-- TODO: Akkoma & Firefish -->
+</div>
+<p><a href="https://akkoma.dev/AkkomaGang/akkoma/">Akkoma</a>, <a href="https://activitypub.software/TransFem-org/Sharkey">Sharkey</a>, etc. forks should be compatible with upstream, so they are not listed separately.</p>
 
                     </main>
 
