--- a/users/getting-started.html
+++ b/users/getting-started.html
@@ -187,7 +187,7 @@
 <ul>
 <li><a href="./feed.html">Feed</a></li>
 <li><a href="./redirecting.html">Redirecting</a></li>
-<li><a href="./backfeed.html">Backfeed (TODO)</a></li>
+<li><a href="./backfeed.html">Backfeed</a></li>
 </ul>
 <h2 id="choose-instance"><a class="header" href="#choose-instance">Choose instance</a></h2>
 <p>After Hatsu supports public instances, there may be a list of instances here.</p>
