deploy: ac1b6ad4001d8d217e0b8c16f46a7b28c84c12d8

--- a/others/federation.html
+++ b/others/federation.html
@@ -210,9 +210,9 @@
 <li><code>Follow(Actor)</code>, <code>Undo(Follow)</code></li>
 <li><code>Create(Note)</code></li>
 <li><code>Like(Note)</code>, <code>Undo(Like)</code></li>
+<li><code>Announce(Note)</code>, <code>Undo(Announce)</code></li>
 </ul>
 <!-- - `Create(Note)`, `Update(Note)`, `Delete(Note)` -->
-<!-- - `Announce(Note)`, `Undo(Announce)` -->
 <p>Activities are implemented in way that is compatible with Mastodon and other
 popular ActivityPub servers.</p>
 <h3 id="notable-differences"><a class="header" href="#notable-differences">Notable differences</a></h3>
