--- a/print.html
+++ b/print.html
@@ -602,6 +602,11 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <p>Hatsu supports dotenv, and you can set environment variables via the <code>.env</code> file.</p>
 <p>It is required unless it has a suffix (optional).</p>
 <p>However, it may exist as a built-in preset (in the source code) or an example preset (in <a href="https://github.com/importantimport/hatsu/blob/main/.env.example"><code>.env.example</code></a>)</p>
+<h2 id="hatsu_env_file"><a class="header" href="#hatsu_env_file">HATSU_ENV_FILE</a></h2>
+<ul>
+<li>default: <code>/etc/hatsu/.env</code></li>
+</ul>
+<p>Hatsu will first try to find the dotenv file in the current directory, and if unsuccessful will try to use the path indicated by <code>HATSU_ENV_FILE</code>.</p>
 <h2 id="hatsu_database_url"><a class="header" href="#hatsu_database_url">HATSU_DATABASE_URL</a></h2>
 <ul>
 <li>default: <code>sqlite::memory:</code></li>
