deploy: 272a9e3dc03cc1b3b94042c835d383f7aa6cad73

--- a/admins/install-docker.html
+++ b/admins/install-docker.html
@@ -181,6 +181,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="docker-installation"><a class="header" href="#docker-installation">Docker Installation</a></h1>
+<blockquote>
+<p>Hatsu uses the <code>x86-64-v3</code> target architecture for optimal performance.</p>
+<p>If you are using an older processor, you currently need to build locally and change the corresponding values in <code>.cargo/config.toml</code>.</p>
+</blockquote>
 <p>You can find images on GitHub: <a href="https://github.com/importantimport/hatsu/pkgs/container/hatsu">https://github.com/importantimport/hatsu/pkgs/container/hatsu</a></p>
 <p>Hatsu uses three primary tags: <code>latest</code> (stable), <code>beta</code> and <code>nightly</code>, literally.</p>
 <h2 id="docker-run"><a class="header" href="#docker-run">docker run</a></h2>
