--- a/print.html
+++ b/print.html
@@ -570,6 +570,10 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <h2 id="docker-installation"><a class="header" href="#docker-installation"><a href="admins/./install-docker.html">Docker Installation</a></a></h2>
 <h2 id="binary-installation"><a class="header" href="#binary-installation"><a href="admins/./install-binary.html">Binary Installation</a></a></h2>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="docker-installation-1"><a class="header" href="#docker-installation-1">Docker Installation</a></h1>
+<blockquote>
+<p>Hatsu uses the <code>x86-64-v3</code> target architecture for optimal performance.</p>
+<p>If you are using an older processor, you currently need to build locally and change the corresponding values in <code>.cargo/config.toml</code>.</p>
+</blockquote>
 <p>You can find images on GitHub: <a href="https://github.com/importantimport/hatsu/pkgs/container/hatsu">https://github.com/importantimport/hatsu/pkgs/container/hatsu</a></p>
 <p>Hatsu uses three primary tags: <code>latest</code> (stable), <code>beta</code> and <code>nightly</code>, literally.</p>
 <h2 id="docker-run"><a class="header" href="#docker-run">docker run</a></h2>
@@ -593,6 +597,10 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <p>The <a href="https://github.com/importantimport/hatsu/tree/main/examples">examples</a> folder contains some sample docker compose configurations,</p>
 <p>You can make your own modifications based on them.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="binary-installation-1"><a class="header" href="#binary-installation-1">Binary Installation</a></h1>
+<blockquote>
+<p>Hatsu uses the <code>x86-64-v3</code> target architecture for optimal performance.</p>
+<p>If you are using an older processor, you currently need to build locally and change the corresponding values in <code>.cargo/config.toml</code>.</p>
+</blockquote>
 <h2 id="releases"><a class="header" href="#releases">Releases</a></h2>
 <p>You can download both stable and beta versions of Hatsu from the <a href="https://github.com/importantimport/hatsu/releases">Releases page</a>.</p>
 <h2 id="artifacts"><a class="header" href="#artifacts">Artifacts</a></h2>
