--- a/others/json-feed-extension.html
+++ b/others/json-feed-extension.html
@@ -190,6 +190,7 @@
 <p>The following applies to the <a href="https://www.jsonfeed.org/version/1.1/#top-level-a-name-top-level-a">Top-level JSON Feed</a>.</p>
 <ul>
 <li><code>about</code> (optional but strongly recommended, string) is the URL used to introduce this extension to humans. should be <a href="https://github.com/importantimport/hatsu/issues/1">https://github.com/importantimport/hatsu/issues/1</a> .</li>
+<li><code>aliases</code> (optional, string) is the customized username used for <a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/4adb/fep-4adb.md">FEP-4adb</a> and <a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/2c59/fep-2c59.md">FEP-2c59</a>.</li>
 <li><code>banner_image</code> (optional, string) is the URL of the banner image for the website in hatsu.</li>
 </ul>
 <h2 id="items"><a class="header" href="#items">Items</a></h2>
