--- a/users/backfeed-based-on-kkna.html
+++ b/users/backfeed-based-on-kkna.html
@@ -183,6 +183,9 @@
                         <h1 id="backfeed-based-on-kkna"><a class="header" href="#backfeed-based-on-kkna">Backfeed based on KKna</a></h1>
 <p>Written by the same authors as Hatsu, KKna provides the simplest integration for Hatsu.</p>
 <h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
 <pre><code class="language-html">&lt;script type="module"&gt;
   import { defineConfig } from 'https://esm.sh/@kkna/context'
   import { hatsu } from 'https://esm.sh/@kkna/preset-hatsu'
