--- a/print.html
+++ b/print.html
@@ -472,6 +472,9 @@ app.use('/posts/*', hatsuObject({ instance }))
 <div style="break-before: page; page-break-before: always;"></div><h1 id="backfeed-based-on-kkna"><a class="header" href="#backfeed-based-on-kkna">Backfeed based on KKna</a></h1>
 <p>Written by the same authors as Hatsu, KKna provides the simplest integration for Hatsu.</p>
 <h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
 <pre><code class="language-html">&lt;script type="module"&gt;
   import { defineConfig } from 'https://esm.sh/@kkna/context'
   import { hatsu } from 'https://esm.sh/@kkna/preset-hatsu'
