--- a/admins/environments.html
+++ b/admins/environments.html
@@ -184,6 +184,12 @@
 <p>Hatsu supports dotenv, and you can set environment variables via the <code>.env</code> file.</p>
 <p>It is required unless it has a suffix (optional).</p>
 <p>However, it may exist as a built-in preset (in the source code) or an example preset (in <a href="https://github.com/importantimport/hatsu/blob/main/.env.example"><code>.env.example</code></a>)</p>
+<h2 id="hatsu_log"><a class="header" href="#hatsu_log">HATSU_LOG</a></h2>
+<ul>
+<li>default: <code>info</code></li>
+<li>example: <code>info,tokio::net=debug</code></li>
+</ul>
+<p>The format is the same as the <a href="https://docs.rs/tracing-subscriber/latest/tracing_subscriber/filter/struct.EnvFilter.html#example-syntax"><code>RUST_LOG</code></a>.</p>
 <h2 id="hatsu_env_file"><a class="header" href="#hatsu_env_file">HATSU_ENV_FILE</a></h2>
 <ul>
 <li>default: <code>/etc/hatsu/.env</code></li>
