deploy: 4437af97f010ea66f2987b5bc2a476cacce23734

--- a/print.html
+++ b/print.html
@@ -775,10 +775,10 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <h2 id="dependencies"><a class="header" href="#dependencies">Dependencies</a></h2>
 <p>To develop Hatsu, you should first <a href="https://www.rust-lang.org/tools/install">install Rust</a> and some dependencies.</p>
 <pre><code class="language-bash"># Arch-based distro
-sudo pacman -S git cargo openssl
+sudo pacman -S git cargo
 
 # Debian-based distro
-sudo apt install git cargo libssl-dev
+sudo apt install git cargo
 </code></pre>
 <h2 id="running"><a class="header" href="#running">Running</a></h2>
 <p>First copy the variables,</p>
