deploy: 8e039b1f83cc4c8496edddd61e1353c2ec8a8df2

--- a/others/packaging-status.html
+++ b/others/packaging-status.html
@@ -183,6 +183,14 @@
                         <h1 id="packaging-status"><a class="header" href="#packaging-status">Packaging Status</a></h1>
 <p><a href="https://repology.org/project/hatsu/versions"><img src="https://repology.org/badge/vertical-allrepos/hatsu.svg" alt="Packaging status" /></a></p>
 <p>If you are interested in packaging Hatsu for other distros, please to let me know!</p>
+<h2 id="arch-linux"><a class="header" href="#arch-linux">Arch Linux</a></h2>
+<h3 id="aur"><a class="header" href="#aur"><a href="https://aur.archlinux.org/packages/hatsu">AUR</a></a></h3>
+<p>Maintainer: <a href="https://github.com/Decodetalkers">@Decodetalkers</a></p>
+<h2 id="nix--nixos"><a class="header" href="#nix--nixos">Nix / NixOS</a></h2>
+<h3 id="nixpkgs"><a class="header" href="#nixpkgs"><a href="https://github.com/NixOS/nixpkgs/blob/nixos-unstable/pkgs/by-name/ha/hatsu/package.nix">Nixpkgs</a></a></h3>
+<p>Maintainer: <a href="https://github.com/kwaa">@kwaa</a></p>
+<h3 id="nur-sn0wm1x"><a class="header" href="#nur-sn0wm1x"><a href="https://github.com/sn0wm1x/ur/blob/main/pkgs/by-name/hatsu/default.nix">NUR (sn0wm1x)</a></a></h3>
+<p>Maintainer: <a href="https://github.com/kwaa">@kwaa</a></p>
 
                     </main>
 
