--- a/admins/environments.html
+++ b/admins/environments.html
@@ -187,7 +187,7 @@
 <h2 id="hatsu_log"><a class="header" href="#hatsu_log">HATSU_LOG</a></h2>
 <ul>
 <li>default: <code>info</code></li>
-<li>example: <code>info,tokio::net=debug</code></li>
+<li>example: <code>info,tokio::net=debug,sqlx::query=warn</code></li>
 </ul>
 <p>The format is the same as the <a href="https://docs.rs/tracing-subscriber/latest/tracing_subscriber/filter/struct.EnvFilter.html#example-syntax"><code>RUST_LOG</code></a>.</p>
 <h2 id="hatsu_env_file"><a class="header" href="#hatsu_env_file">HATSU_ENV_FILE</a></h2>
